--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "doctrine/dbal": "^2.12",
         "fideloper/proxy": "^4.4",
         "jeroennoten/laravel-adminlte": "^3.5",
         "laravel/framework": "^6.20",
