--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "fullcalendar": "^5.3.2"
+        "fullcalendar": "^5.3.2",
+        "jQuery": "^1.7.4"
     }
 }
